menambahkan paragraf di index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Hello git</h1>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, voluptatum.</p>
 </body>
 </html>
